Fix overflow-y not scrolling

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -8,7 +8,7 @@ html {
   color: var(--color-base-l100);
   padding: 0;
   margin: 0;
-  overflow: clip;
+  overflow-x: clip;
 }
 
 body {
